-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: core-svc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8081940 | emb-9 | Shanliang Jiang | P3 | Resolved | Fixed | b64 |
Of the requirements for modules that export Java SE APIs is that they don't export additional JDK-specific APIs. JDK-specific APIs need to be exported by other (JDK-specific) modules. The management extensions need to be re-examined with a view to factoring out com.sun.security to another JDK-specific module. The module that exports java.lang.management should not depend on any JDK-specific modules.
- backported by
-
JDK-8081940 Allow com.sun.management to be in a different module to java.lang.management
-
- Resolved
-
- blocks
-
JDK-8076089 Cleanup: Inline & remove sun.management.Util.newException
-
- Resolved
-
- relates to
-
JDK-8065213 Specify and implement PlatformMBeanProvider for looking for all platform MBeans
-
- Resolved
-
-
JDK-8079510 AIX: fix build after '8042901: Allow com.sun.management to be in a different module...'
-
- Resolved
-
-
JDK-8140481 NoClassDefFoundError thrown by ManagementFactory.getPlatformMBeanServer
-
- Resolved
-
- links to
(1 links to)