8042901: Allow com.sun.management to be in a different module to java.lang.management

Reviewed-by: mchung, dfuchs, erikj, jbachorik